Closed Bug 1806771 Opened 1 year ago Closed 1 year ago

Perma clang-trunk /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp:178:16: error: 'InclusionDirective' marked 'override' but does not override any member functions

Categories

(Webtools :: Searchfox, defect, P5)

defect

Tracking

(firefox110 fixed)

RESOLVED FIXED
Tracking Status
firefox110 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: glandium)

Details

Attachments

(1 file)

Filed by: mh [at] glandium.org
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=400308815&repo=toolchains
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/FnS8UVBGR4S0pqZqm0Jjxw/runs/0/artifacts/public/logs/live_backing.log


[task 2022-12-21T00:15:10.918Z] 00:15:10    ERROR -  /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp:178:16: error: 'InclusionDirective' marked 'override' but does not override any member functions
[task 2022-12-21T00:15:10.918Z] 00:15:10     INFO -    virtual void InclusionDirective(SourceLocation HashLoc,
[task 2022-12-21T00:15:10.918Z] 00:15:10     INFO -                 ^
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/1931d3d21dc9
Adjust searchfox plugin to clang upstream changes. r=asuth
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: