Bug 1806771 - Adjust searchfox plugin to clang upstream changes. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D165266